--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@mui/material-next": "^6.0.0-alpha.101",
     "@mui/styled-engine-sc": "^5.14.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
